# mias

./: .gitignore  Makefile.am  configure.ac  mias-desk-dbg.iss  mias-desk.iss  mias-v1.workspace  mias-web-dbg.iss  mias.workspace
core/: configure.ac  core-v1.cbp  mias-core.cbp
core/1/: core.cc  core.hh
core/src/: Exception.cc  Exception.hh  Makefile.am  core.cc  core.hh  main.cc  mias-core.pc.in
db/mariadb/alpha/: create.sql  database.sql  default-data-2.sql  default-data.sql  mias-default-data.sql
db/mariadb/beta/: create.sql  database.sql  default-data.sql
desk/: Makefile.am  configure.ac  desk-1.cbp  desk-1.workspace  desk-main.cc  desk.cbp  desk.cc  desk.hh  mias-desk.ui
desk/1/: desk-TableSaling.cc  desk-TableServicies.cc  desk-main.cc  desk.cc  desk.hh
desk/src/: Makefile.am  config-cb.h  desk-main.cc  desk.cc  desk.hh  main.cc  resources.xml
html/css/Mkos-Big-Sur/mias/icons/: application.css
ing/: mias.pod
installer/: msys2-distrib.sh
src/: Makefile.am  application-main.cc  application.cc  application.hh  main.cc
web/: Makefile.am  configure.ac  mias-web.cbp
web/cgi/: Makefile.am  application-main.cc  application-making.cc  application-oven.cc  application-pizza.cc  application-stove.cc  application.cc  application.hh  main.cc
web/html/css/: mias.css
web/html/js/: mias.js
web/src/: Makefile.am
